--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                         <img src="img/3.jpeg" alt="Managing Partner" class="img-fluid">
                     </div>
                     <div class="member-info">
-                        <h3>Atty. Maria Santos</h3>
+                        <h3>Atty. Maria Reyes</h3>
                         <p class="position en">Managing Partner</p>
                         <p class="position tl" style="display: none;">Managing Partner</p>
                         <p class="en">Expert in financial recovery and litigation with extensive knowledge of Philippine business law.</p>
